tests/Rules/Media/Fixtures/valid/video_with_captions.html.twig
<video controls>
    <source src="movie.mp4" type="video/mp4">
    <track kind="captions" srclang="en" label="English captions" src="captions_en.vtt">
</video>
