tests/Rules/Media/Fixtures/invalid/autoplay_no_muted.html.twig
{# 1 errors #}
<video autoplay><source src="v.mp4" /></video>
